gitflow-hotfix-stash: homepage-overflow-fix

--- a/src/scss/pages/page-home.scss
+++ b/src/scss/pages/page-home.scss
@@ -1,4 +1,5 @@
 .index-page {
+	overflow-x: hidden;
 	&:before {
 		position: absolute;
 		left: 0;
